Adding support for running test suite also on modular JDKs